# CSC15003-CA-simulation-main

./: .cursorrules  .gitignore  CMakeLists.txt  README.md  build.bat  cmake-manual.md  error.md  report.md  run_client.bat  run_server.bat  run_tests.bat  test.md
Release/: Cert2.key  cert3.key  cert4.key
Release/data/: ca_config.json
Release/data/certs/: ca_cert.pem
Release/data/db/: ca.db
Release/data/keys/: ca_private.key
docs/: developer_guide.md  user_manual.md
include/: auth_system.h  certificate_authority.h  client_console.h  common.h  database.h  openssl_wrapper.h  server_console.h  server_handler.h  socket_comm.h
src/: auth_system.cpp  certificate_authority.cpp  client_console.cpp  client_main.cpp  database.cpp  main.cpp  openssl_wrapper.cpp  placeholder.cpp  server_console.cpp  server_handler.cpp  socket_comm.cpp
test/: test_ca_system.cpp
